--- a/facebook/src/App.css
+++ b/facebook/src/App.css
@@ -1,9 +1,14 @@
 html {
   background-color: rgb(24,25,26);
-}
-.App {
-
-  width: 100%;
-
   
+}
+.app {
+  width: 100%;
+  display: flex;
+  
+}
+
+
+.info {
+  width: 80%;
 }
