--- a/facebook/src/App.css
+++ b/facebook/src/App.css
@@ -4,11 +4,14 @@ html {
 }
 .app {
   width: 100%;
-  display: flex;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
   
 }
 
 
 .info {
-  width: 80%;
+ 
 }
