--- a/facebook/src/components/card/card.css
+++ b/facebook/src/components/card/card.css
@@ -1,11 +1,3 @@
-.showPost {
-    display: flex;
-    flex-direction: row;
-    padding: 12px 0px 10px 0px;
-    width: 100%;
-    
-    
-}
 
 .avatar {
     flex: 0;
@@ -19,8 +11,9 @@
 }
 
 .postInfo {
-    background-color: rgb(24,25,26);
+    background-color: rgba(24, 25, 26, 0) !important;
     flex: 2;
+    border-radius: 20px;
 }
 
 .title {
@@ -55,7 +48,7 @@
 
 .username {
     font-weight: lighter;
-    
+
     color: rgba(211, 211, 211, 0.536);
     justify-self: start;
 }
@@ -97,9 +90,12 @@
 }
 
 .main img {
-    max-height: fit-content;
     max-width: 100%;
+    height: auto;
     object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main p {
@@ -112,7 +108,9 @@
     justify-content: space-between;
     margin-top: 9px;
     padding: 0px 10px 0px 10px;
- 
+    margin-bottom: 5px;
+   
+
 
 }
 
@@ -124,7 +122,7 @@
     justify-content: center;
     width: 37%;
     border-top: 1px solid whitesmoke;
-    border-bottom: 1px solid whitesmoke;
+    
 }
 
 
@@ -132,6 +130,7 @@
 .like:hover {
     color: red;
     background-color: rgba(120, 6, 6, 0.47);
+    border-radius: 5px;
 }
 
 .icon4 {
@@ -147,6 +146,7 @@
 .comment:hover {
     color: rgb(81, 255, 0);
     background-color: rgba(51, 145, 7, 0.326);
+    border-radius: 5px;
 }
 
 
@@ -155,4 +155,5 @@
 .share:hover {
     color: rgb(0, 183, 255);
     background-color: rgba(7, 118, 162, 0.337);
+    border-radius: 5px;
 }
