--- a/facebook/src/views/Hompage/home.css
+++ b/facebook/src/views/Hompage/home.css
@@ -2,14 +2,15 @@
     padding: 10px;
     color: whitesmoke;
     height: 100%;
-    
+    width: 100%;
     
 }
 
 .content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
     
 }
