--- a/facebook/src/views/Newsfeed/newsfeed.css
+++ b/facebook/src/views/Newsfeed/newsfeed.css
@@ -1,21 +1,23 @@
 .feed {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 40%;
     height: 100%;
     color: whitesmoke;
     padding-bottom: 10px;
-    margin-left: 20px;
+    
     justify-content: center;
     align-items: center;
 }
 
 .post {
-    width: 50%;
+    width: 100%;
     height: 50%;
-    border: 1px solid rgba(212, 212, 212, 0.651);
+    border: 1px solid rgb(36,37,38);
     border-bottom: 0px;
     border-radius: 20px;
     margin-top: 12px;
+    background-color: rgba(36, 37, 38, 0.405) !important;
+ 
     
 }
